clients, features, teams

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     </li>
                     <li class="features__item icon-astronaut">
                         <h3 class="features__heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="features__text">Значимість цих проблем настільки очевидна, що реалізація планових
+                        <p class="features__text">Значимість цих проблем настільки очевидна, що реалізація
+                            планових
                             завдань.
                         </p>
                     </li>
@@ -88,7 +89,7 @@
             </div>
         </section>
 
-        <!-- <section class="occupation">
+        <section class="occupation">
             <div class="container">
                 <h2 class="occupation__title">Чим ми займаємося</h2>
                 <ul class="occupation__list list">
@@ -106,7 +107,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- <section class="team">
             <div class="container">
@@ -253,7 +254,7 @@
             </div>
         </section> -->
 
-        <!-- <section class="client">
+        <section class="client">
             <div class="container">
                 <h2 class="client-title">Постійні клієнти</h2>
                 <ul class="list client-list">
@@ -301,13 +302,13 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
-            <div>
-                <a class="logo link" href="./index.html"><span class="logo-color">Web</span><span
-                        class="logo-color-footer">Studio</span></a>
+            <div class="footer__logo">
+                <a class="logo link" href="./index.html"> <span class="logo-display"><span
+                            class="logo-color">Web</span><span class="logo-color-footer">Studio</span></span> </a>
                 <address class="address">
                     <ul class="address-list list">
                         <li class="address-item"><a class="address-item-link link"
@@ -364,7 +365,7 @@
                     </div>
                 </form>
             </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden " data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
