--- a/index.html
+++ b/index.html
@@ -306,63 +306,66 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer__logo">
-                <a class="logo link" href="./index.html"> <span class="logo-display"><span
-                            class="logo-color">Web</span><span class="logo-color-footer">Studio</span></span> </a>
-                <address class="address">
-                    <ul class="address-list list">
-                        <li class="address-item"><a class="address-item-link link"
-                                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                                target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="address-item"><a class="address-item-link link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="address-item"><a class="address-item-link link" href="tel:+380961111111">+38 096 111
-                                11
-                                11</a></li>
+            <div class="footer-container-tablet">
+                <div>
+                    <a class="logo link footer__logo" href="./index.html"><span class="logo-color">Web</span><span
+                            class="logo-color-footer">Studio</span> </a>
+                    <address class="address">
+                        <ul class="address-list list">
+                            <li class="address-item"><a class="address-item-link link"
+                                    href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                                    target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
+                            <li class="address-item"><a class="address-item-link link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="address-item"><a class="address-item-link link" href="tel:+380961111111">+38 096
+                                    111
+                                    11
+                                    11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div>
+                    <span class="footer-heading">приєднуйтесь</span>
+                    <ul class="footer-soc-list list">
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div>
-                <span class="footer-heading">приєднуйтесь</span>
-                <ul class="footer-soc-list list">
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <div>
                 <span class="footer-heading">Підпишіться на розсилку</span>
-                <form>
+                <form class="footer__form--flex">
                     <div class="footer-form">
                         <input type="email" name="email" placeholder=" " id="email" class="footer-input">
                         <label for="email" class="footer-label">E-mail</label>
-                        <button type="submit" class="btn btn-form">Підписатися</button>
                     </div>
+                    <button type="submit" class="btn btn-form">Підписатися</button>
                 </form>
             </div>
     </footer>
