--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header--posihion">
             <nav class="nav header--posihion">
                 <a class="logo link" href="./index.html"> <span class="logo-color">Web</span>Studio</a>
@@ -47,17 +47,59 @@
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button type="button" class="menu-open">
+                <svg class="menu-open-icon" width="24" height="16">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
-    </header> -->
+        <div class="mob-menu">
+            <button type="button" class="menu-open">
+                <svg class="menu-open-icon" width="24" height="16">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
+                </svg>
+            </button>
+            <nav>
+                <ul class="menu__list list">
+                    <li class="menu__item"> <a class="nav__link link current" href="./index.html">Студія</a>
+                    </li>
+                    <li class="menu__item"> <a class="nav__link link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="menu__item"> <a class="nav__link link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="menu__list list">
+                <li class="menu__item">
+                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="16"
+                            height="12">
+                            <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+
+                <li class="menu__item">
+                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
+                            height="16">
+                            <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+                        </svg> +38 096 111 11 11</a>
+                </li>
+            </ul>
+            <ul>
+                <li class="menu-soc"><a href="#">Instagram</a></li>
+                <li class="menu-soc"><a href="#">Twitter</a></li>
+                <li class="menu-soc"><a href="#">Facebook</a></li>
+                <li class="menu-soc"><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
+    </header>
 
     <main>
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="container">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button class="btn" type="button" data-modal-open>Замовити послугу</button>
             </div>
 
-        </section> -->
+        </section>
 
         <section class="featers">
             <div class="container">
@@ -109,12 +151,14 @@
             </div>
         </section>
 
-        <!-- <section class="team">
+        <section class="team">
             <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team__item">
-                        <img src="./images/team/igor-demeinenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+
+                        <img srcset="./images/team/igor-demeinenko.jpg 1x, ./images/team/igor-demeinenko-2x.jpg 2x"
+                            src="./images/team/igor-demeinenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                         <div class="card">
                             <h3 class="card__heading">Ігор Дем'яненко</h3>
                             <p class="card__text" lang="en">Product Designer</p>
@@ -149,7 +193,12 @@
 
                     </li>
                     <li class="team__item">
-                        <img src="./images/team/olga-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                        <picture>
+                            <source srcset="">
+                        </picture>
+
+                        <img srcset="./images/team/olga-repina.jpg 1x, ./images/team/olga-repina-2x.jpg 2x"
+                            src="./images/team/olga-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
                         <div class="card">
                             <h3 class="card__heading">Ольга Рєпіна</h3>
                             <p class="card__text" lang="en">Frontend Developer</p>
@@ -183,7 +232,8 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="./images/team/mykola-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <img srcset="./images/team/mykola-tarasov.jpg 1x, ./images/team/mykola-tarasov-2x.jpg 2x"
+                            src="./images/team/mykola-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
                         <div class="card">
                             <h3 class="card__heading">Микола Тарасов</h3>
                             <p class="card__text" lang="en">Marketing</p>
@@ -217,7 +267,8 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="./images/team/myhailo-ermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <img srcset="./images/team/myhailo-ermakov.jpg 1x, ./images/team/myhailo-ermakov-2x.jpg 2x"
+                            src="./images/team/myhailo-ermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
                         <div class="card">
                             <h3 class="card__heading">Михайло Єрмаков</h3>
                             <p class="card__text" lang="en">UI Designer</p>
@@ -252,7 +303,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <section class="client">
             <div class="container">
