--- a/index.html
+++ b/index.html
@@ -53,42 +53,45 @@
                 </svg>
             </button>
         </div>
-        <div class="mob-menu">
-            <button type="button" class="menu-open">
-                <svg class="menu-open-icon" width="24" height="16">
-                    <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
-                </svg>
-            </button>
-            <nav>
-                <ul class="menu__list list">
-                    <li class="menu__item"> <a class="nav__link link current" href="./index.html">Студія</a>
-                    </li>
-                    <li class="menu__item"> <a class="nav__link link" href="./portfolio.html">Портфоліо</a>
-                    </li>
-                    <li class="menu__item"> <a class="nav__link link" href="#">Контакти</a></li>
-                </ul>
-            </nav>
-            <ul class="menu__list list">
-                <li class="menu__item">
-                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="16"
-                            height="12">
-                            <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
-                        </svg>info@devstudio.com</a>
-                </li>
 
-                <li class="menu__item">
-                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
-                            height="16">
-                            <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
-                        </svg> +38 096 111 11 11</a>
-                </li>
-            </ul>
-            <ul>
-                <li class="menu-soc"><a href="#">Instagram</a></li>
-                <li class="menu-soc"><a href="#">Twitter</a></li>
-                <li class="menu-soc"><a href="#">Facebook</a></li>
-                <li class="menu-soc"><a href="#">LinkedIn</a></li>
-            </ul>
+        <div class="menu">
+            <div class="mob-menu mob-container">
+                <button type="button" class="menu-close">
+                    <svg class="menu-open-icon" width="24" height="16">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <nav>
+                    <ul class="menu__list list">
+                        <li class="menu__item"> <a class="menu__link link current" href="./index.html">Студія</a>
+                        </li>
+                        <li class="menu__item"> <a class="menu__link link" href="./portfolio.html">Портфоліо</a>
+                        </li>
+                        <li class="menu__item"> <a class="menu__link link" href="#">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="menu__list list">
+                    <li class="menu__contact">
+                        <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon"
+                                width="16" height="12">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
+                            </svg>info@devstudio.com</a>
+                    </li>
+
+                    <li class="menu__contact">
+                        <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
+                                height="16">
+                                <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+                            </svg> +38 096 111 11 11</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="menu-soc"><a href="#">Instagram</a></li>
+                    <li class="menu-soc"><a href="#">Twitter</a></li>
+                    <li class="menu-soc"><a href="#">Facebook</a></li>
+                    <li class="menu-soc"><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
