--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
                 </ul>
             </nav>
 
-            <ul class="nav__list list">
+            <ul class="nav__list nav__list--posihion list ">
                 <li class="nav__item">
-                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="16"
-                            height="12">
+                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="14"
+                            height="10">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
                         </svg>info@devstudio.com</a>
                 </li>
 
                 <li class="nav__item">
-                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
-                            height="16">
+                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon nav__icon--size"
+                            width="10" height="14">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
-            <button type="button" class="menu-open">
+            <button type="button" class="menu-open" data-mobile-open>
                 <svg class="menu-open-icon" width="24" height="16">
                     <use href="./images/icons.svg/symbol-defs.svg#icon-menu"></use>
                 </svg>
             </button>
         </div>
 
-        <div class="menu">
-            <div class="mob-menu mob-container">
-                <button type="button" class="menu-close">
-                    <svg class="menu-open-icon" width="24" height="16">
+        <div>
+            <div class="mob-menu is-hidden" data-mobile>
+                <button type="button" class="menu-close" data-mobile-close>
+                    <svg class="menu-close-icon" width="24" height="16">
                         <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
                     </svg>
                 </button>
@@ -70,26 +70,20 @@
                         <li class="menu__item"> <a class="menu__link link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="menu__list list">
+                <ul class="list">
                     <li class="menu__contact">
-                        <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon"
-                                width="16" height="12">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
-                            </svg>info@devstudio.com</a>
+                        <a class="menu__contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
 
                     <li class="menu__contact">
-                        <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
-                                height="16">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
-                            </svg> +38 096 111 11 11</a>
+                        <a class=" menu__contacts link" href="tel:+380961111111 "> +38 096 111 11 11</a>
                     </li>
                 </ul>
-                <ul>
-                    <li class="menu-soc"><a href="#">Instagram</a></li>
-                    <li class="menu-soc"><a href="#">Twitter</a></li>
-                    <li class="menu-soc"><a href="#">Facebook</a></li>
-                    <li class="menu-soc"><a href="#">LinkedIn</a></li>
+                <ul class="menu-soc list">
+                    <li><a class="link menu-soc-link" href="#">Instagram</a></li>
+                    <li><a class="link menu-soc-link" href="#">Twitter</a></li>
+                    <li><a class="link menu-soc-link" href="#">Facebook</a></li>
+                    <li><a class="link menu-soc-link" href="#">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
@@ -416,14 +410,16 @@
                 <span class="footer-heading">Підпишіться на розсилку</span>
                 <form class="footer__form--flex">
                     <div class="footer-form">
-                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
                         <label for="email" class="footer-label">E-mail</label>
+                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
+
                     </div>
                     <button type="submit" class="btn btn-form">Підписатися</button>
                 </form>
             </div>
     </footer>
-    <!-- <div class="backdrop is-hidden " data-modal>
+
+    <div class="backdrop is-hidden " data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-icon" width="18" height="18">
@@ -483,7 +479,8 @@
             </form>
         </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile.js"></script>
 </body>
 </body>
 
