--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <main>
         <section class="hero">
-            <div class="container">
+            <div class="container hero-container">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button class="btn" type="button" data-modal-open>Замовити послугу</button>
             </div>
@@ -133,15 +133,19 @@
                 <h2 class="occupation__title">Чим ми займаємося</h2>
                 <ul class="occupation__list list">
                     <li class="occupation__item">
-                        <img src="./images/box1.jpg" alt="Розробка" width="370" height="294">
+
+                        <img srcset="./images/box1.jpg 1x, ./images/box1-2x.jpeg 2x " src="./images/box1.jpg"
+                            alt="Розробка" width="370" height="294">
                         <h3 class="occupation__heading">Десктопні додатки</h3>
                     </li>
                     <li class="occupation__item">
-                        <img src="./images/box2.jpg" alt="Адаптивність" width="370" height="294">
+                        <img srcset="./images/box2.jpg 1x, ./images/box2-2x.jpeg 2x" src="./images/box2.jpg"
+                            alt="Адаптивність" width="370" height="294">
                         <h3 class="occupation__heading">Мобільні додатки</h3>
                     </li>
                     <li class="occupation__item">
-                        <img src="./images/box3.jpg" alt="Дизайн" width="370" height="294">
+                        <img srcset="./images/box3.jpg 1x, ./images/box3-2x.jpeg 2x" src="./images/box3.jpg"
+                            alt="Дизайн" width="370" height="294">
                         <h3 class="occupation__heading">Дизайнерські рішення</h3>
                     </li>
                 </ul>
@@ -153,9 +157,18 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team__item">
-
-                        <img srcset="./images/team/igor-demeinenko.jpg 1x, ./images/team/igor-demeinenko-2x.jpg 2x"
-                            src="./images/team/igor-demeinenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                        <picture>
+                            <source
+                                srcset="./images/team/igor-demeinenko.jpg 1x, ./images/team/igor-demeinenko-2x.jpeg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/igor-demeinenko-tablet.jpg 1x, ./images/team/igor-demeinenko-tablet-2x.jpeg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/igor-demeinenko-mobale.jpg 1x, ./images/team/igor-demeinenko-mobale-2x.jpeg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team/igor-demeinenko-mobale.jpg" alt="Ігор Дем'яненко" width="450">
+                        </picture>
                         <div class="card">
                             <h3 class="card__heading">Ігор Дем'яненко</h3>
                             <p class="card__text" lang="en">Product Designer</p>
@@ -191,11 +204,16 @@
                     </li>
                     <li class="team__item">
                         <picture>
-                            <source srcset="">
+                            <source srcset="./images/team/olga-repina.jpg 1x, ./images/team/olga-repina-2x.jpeg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/olga-repina-tablet.jpg 1x, ./images/team/olga-repina-tablet-2x.jpeg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/olga-repina-mobile.jpg 1x, ./images/team/olga-repina-mobile-2x.jpeg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team/olga-repina-mobile.jpg" alt="Ольга Рєпіна" width="450">
                         </picture>
-
-                        <img srcset="./images/team/olga-repina.jpg 1x, ./images/team/olga-repina-2x.jpg 2x"
-                            src="./images/team/olga-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
                         <div class="card">
                             <h3 class="card__heading">Ольга Рєпіна</h3>
                             <p class="card__text" lang="en">Frontend Developer</p>
@@ -229,8 +247,18 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img srcset="./images/team/mykola-tarasov.jpg 1x, ./images/team/mykola-tarasov-2x.jpg 2x"
-                            src="./images/team/mykola-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <picture>
+                            <source
+                                srcset="./images/team/mykola-tarasov.jpg 1x, ./images/team/mykola-tarasov-2x.jpeg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/mykola-tarasov-tablet.jpg 1x, ./images/team/mykola-tarasov-tablet-2x.jpeg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/mykola-tarasov-mobile.jpg 1x, ./images/team/mykola-tarasov-mobile-2x.jpeg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team/mykola-tarasov-mobile.jpg" alt="Микола Тарасов" width="450">
+                        </picture>
                         <div class="card">
                             <h3 class="card__heading">Микола Тарасов</h3>
                             <p class="card__text" lang="en">Marketing</p>
@@ -264,8 +292,18 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img srcset="./images/team/myhailo-ermakov.jpg 1x, ./images/team/myhailo-ermakov-2x.jpg 2x"
-                            src="./images/team/myhailo-ermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <picture>
+                            <source
+                                srcset="./images/team/myhailo-ermakov.jpg 1x, ./images/team/myhailo-ermakov-2x.jpeg 2x"
+                                media="(min-width: 1200px)">
+                            <source
+                                srcset="./images/team/myhailo-ermakov-tablet.jpg 1x, ./images/team/myhailo-ermakov-tablet-2x.jpeg 2x"
+                                media="(min-width: 768px)">
+                            <source
+                                srcset="./images/team/myhailo-ermakov-mobile.jpg 1x, ./images/team/myhailo-ermakov-mobile-2x.jpeg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team/myhailo-ermakov-mobile.jpg" alt="Михайло Єрмаков" width="450">
+                        </picture>
                         <div class="card">
                             <h3 class="card__heading">Михайло Єрмаков</h3>
                             <p class="card__text" lang="en">UI Designer</p>
@@ -408,11 +446,11 @@
             </div>
             <div>
                 <span class="footer-heading">Підпишіться на розсилку</span>
-                <form class="footer__form--flex">
+                <form>
                     <div class="footer-form">
-                        <label for="email" class="footer-label">E-mail</label>
-                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
 
+                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
+                        <label for="email" class="footer-label">E-mail</label>
                     </div>
                     <button type="submit" class="btn btn-form">Підписатися</button>
                 </form>
