--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@
                 <span class="footer-heading">Підпишіться на розсилку</span>
                 <form>
                     <div class="footer-form">
-                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
-                        <label for="email" class="footer-label">E-mail</label>
+                        <input type="email" name="email" placeholder="E-mail" id="email" class="footer-input">
                         <button type="submit" class="btn btn-form">Підписатися</button>
                     </div>
 
