--- a/portfolio.html
+++ b/portfolio.html
@@ -23,29 +23,68 @@
             <nav class="nav header--posihion">
                 <a class="logo link" href="./index.html"> <span class="logo-color">Web</span>Studio</a>
                 <ul class="nav__list list">
-                    <li class="nav__item"> <a class="nav__link link" href="./index.html">Студія</a>
+                    <li class="nav__item"> <a class="nav__link link " href="./index.html">Студія</a>
                     </li>
                     <li class="nav__item"> <a class="nav__link link current" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="nav__item"> <a class="nav__link link" href="#">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="nav__list list">
-                <li class="nav__item">
 
-                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="16"
-                            height="12">
+            <ul class="nav__list nav__list--posihion list ">
+                <li class="nav__item">
+                    <a class="nav__contacts link" href="mailto:info@devstudio.com"> <svg class="nav__icon" width="14"
+                            height="10">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-email"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="nav__item">
 
-                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon" width="10"
-                            height="16">
+                <li class="nav__item">
+                    <a class=" nav__contacts link" href="tel:+380961111111 "><svg class="nav__icon nav__icon--size"
+                            width="10" height="14">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button type="button" class="menu-open" data-mobile-open>
+                <svg class="menu-open-icon" width="24" height="16">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-menu"></use>
+                </svg>
+            </button>
+        </div>
+
+        <div>
+            <div class="mob-menu is-hidden" data-mobile>
+                <button type="button" class="menu-close" data-mobile-close>
+                    <svg class="menu-close-icon" width="24" height="16">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <nav>
+                    <ul class="menu__list list">
+                        <li class="menu__item"> <a class="menu__link link current" href="./index.html">Студія</a>
+                        </li>
+                        <li class="menu__item"> <a class="menu__link link" href="./portfolio.html">Портфоліо</a>
+                        </li>
+                        <li class="menu__item"> <a class="menu__link link" href="#">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="list">
+                    <li class="menu__contact">
+                        <a class="menu__contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+
+                    <li class="menu__contact">
+                        <a class=" menu__contacts link" href="tel:+380961111111 "> +38 096 111 11 11</a>
+                    </li>
+                </ul>
+                <ul class="menu-soc list">
+                    <li><a class="link menu-soc-link" href="#">Instagram</a></li>
+                    <li><a class="link menu-soc-link" href="#">Twitter</a></li>
+                    <li><a class="link menu-soc-link" href="#">Facebook</a></li>
+                    <li><a class="link menu-soc-link" href="#">LinkedIn</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -219,63 +258,66 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div>
-                <a class="logo link" href="./index.html"><span class="logo-color">Web</span><span
-                        class="logo-color-footer">Studio</span></a>
-                <address class="address">
-                    <ul class="address-list list">
-                        <li class="address-item"><a class="address-item-link link"
-                                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                                target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="address-item"><a class="address-item-link link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="address-item"><a class="address-item-link link" href="tel:+380961111111">+38 096 111
-                                11
-                                11</a></li>
+            <div class="footer-container-tablet">
+                <div>
+                    <a class="logo link footer__logo" href="./index.html"><span class="logo-color">Web</span><span
+                            class="logo-color-footer">Studio</span> </a>
+                    <address class="address">
+                        <ul class="address-list list">
+                            <li class="address-item"><a class="address-item-link link"
+                                    href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                                    target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
+                            <li class="address-item"><a class="address-item-link link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="address-item"><a class="address-item-link link" href="tel:+380961111111">+38 096
+                                    111
+                                    11
+                                    11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div>
+                    <span class="footer-heading">приєднуйтесь</span>
+                    <ul class="footer-soc-list list">
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
+                                <svg class="footer-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div>
-                <span class="footer-heading">приєднуйтесь</span>
-                <ul class="footer-soc-list list">
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="footer-soc-link" href="#" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <div>
                 <span class="footer-heading">Підпишіться на розсилку</span>
                 <form>
                     <div class="footer-form">
-                        <input type="email" name="email" placeholder=" " id="email" class="footer-input">
-                        <label for="email" class="footer-label">E-mail</label>
+                        <input type="email" name="email" placeholder="E-mail" id="email" class="footer-input">
                         <button type="submit" class="btn btn-form">Підписатися</button>
                     </div>
+
                 </form>
             </div>
     </footer>
