--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     </li>
                 </ul>
                 <ul class="menu-soc list">
-                    <li><a class="link menu-soc-link" href="#">Instagram</a></li>
-                    <li><a class="link menu-soc-link" href="#">Twitter</a></li>
-                    <li><a class="link menu-soc-link" href="#">Facebook</a></li>
-                    <li><a class="link menu-soc-link" href="#">LinkedIn</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Instagram</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Twitter</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Facebook</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
