fixed adaptive text modal and menu

--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@
                         <span>
                             <svg width="16" height="15" class="modal-icon-check">
                                 <use href="./images/icons.svg/symbol-defs.svg#icon-icon-check"></use>
-                            </svg></span> Погоджуюся з розсилкою та приймаю<a href="#" class="check-link">Умови
-                            договору</a>
+                            </svg></span>  <div class="checkbox-wrap">Погоджуюся з розсилкою та приймаю <a href="#" class="check-link">Умови
+                            договору</a></div>
                     </label>
                 </div>
                 <div class="modal-button">
