--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                 </svg>
             </button>
         </div>
-
+<!-- MOB-MENU -->
         <div>
             <div class="mob-menu is-hidden" data-menu>
                 <button type="button" class="menu-close" data-menu-close>
@@ -88,6 +88,7 @@
     </header>
     <main>
         <section class="portfolio-section">
+            <!-- FILTERS -->
             <div class="container">
                 <h1 class="portfolio-title">Portfolio</h1>
                 <ul class="filters list">
@@ -97,6 +98,7 @@
                     <li class="filters-item"><button class="btn-filters" type="button">Дизайн</button></li>
                     <li class="filters-item"><button class="btn-filters" type="button">Маркетинг</button></li>
                 </ul>
+                <!-- CARDS -->
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
