--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
                     <li class="filters-item"><button class="btn-filters" type="button">Дизайн</button></li>
                     <li class="filters-item"><button class="btn-filters" type="button">Маркетинг</button></li>
                 </ul>
-                <!-- CARDS -->
+                <!-------------CARDS -->
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
